--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
-    <table id="chessBoard" style="width: auto; height: auto;"></table>
+    <table id="chessBoard"
+        style="width: auto; height: auto; border: 1px solid black;"></table>
     <script type="text/javascript" src="chess.js"></script>
 </body>
