Add functionality to get FIDE base board state

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Chess.js by Nicholas Synovic</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <script type="text/javascript" src="files/fide.json"></script>
     <link rel="stylesheet" href="chess.css">
 
 </head>
