Restructure project into different files

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 <body>
     <table id="chessBoard"
         style="width: auto; height: auto; border: 1px solid black;"></table>
-    <script type="text/javascript" src="chess.js"></script>
+    <script type="text/javascript" src="chessboard.js"></script>
+    <script type="text/javascript" src="move.js"></script>
+    <script type="text/javascript" src="pieces.js"></script>
 </body>
